add the section portfolio

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="discription" content="Effective Solutions for Your Business" />
     <title>WebStudio</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
 
   <body>
@@ -33,12 +34,13 @@
 
     <main>
       <section>
+        <!--Hero image section-->
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
+      <!-- TODO Hide section title Our values-->
       <section>
-        <!--Hide section title Our values-->
         <h2 id="Studio">Our values</h2>
         <ul>
           <li>
@@ -75,13 +77,14 @@
         </ul>
       </section>
 
+      <!--Our Team-->
       <section>
-        <h2 id="Portfolio">Our Team</h2>
+        <h2>Our Team</h2>
 
         <ul>
           <li>
             <img
-              src="./images/imgmark.jpg"
+              src="./images/ourteam-images/imgmark.jpg"
               alt="the man with dark beard"
               width="264"
             />
@@ -91,7 +94,7 @@
 
           <li>
             <img
-              src="./images/imgtom.jpg"
+              src="./images/ourteam-images/imgtom.jpg"
               alt="the young man smile"
               width="264"
             />
@@ -101,7 +104,7 @@
 
           <li>
             <img
-              src="./images/imgcamila.jpg"
+              src="./images/ourteam-images/imgcamila.jpg"
               alt="young pretty woman with dark hair"
               width="264"
             />
@@ -111,12 +114,70 @@
 
           <li>
             <img
-              src="./images/imgdaniel.jpg"
+              src="./images/ourteam-images/imgdaniel.jpg"
               alt="curle yong man with beard"
               width="264"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <!--Our Portfolio-->
+      <section>
+        <h2 id="Portfolio">Our Portfolio</h2>
+        <!--The first block of section  Portfolio-->
+        <ul>
+          <li>
+            <img
+              src="./images/portfolioimages/img-bank-app.jpg"
+              alt="form and steps for registration at app"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolioimages/img-cashlass-payment.jpg"
+              alt="telefone and QR code on the display"
+            />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolioimages/img-meditation-app.jpg"
+              alt="return to normalcy-app"
+            />
+            <h3>Meditaion App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+
+        <!--The second block of section  Portfolio-->
+        <ul>
+          <li>
+            <img src="./images/portfolioimages/img-taxy-service.jpg" alt=" " />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img src="./images/portfolioimages/img-screen-illustr.jpg" alt="" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolioimages/img-onl-cources.jpg"
+              alt="telefone and QR code on the display"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
