--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html">
+        <a class="logows" href="./index.html">
           <span class="web">Web</span>Studio</a
         >
         <ul>
