--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header>
       <nav>
         <a class="logows" href="./index.html">
-          <span class="web">Web</span>Studio</a
+          <span class="web-logo">Web</span>Studio</a
         >
         <ul>
           <li>
@@ -220,8 +220,8 @@
     </main>
 
     <footer>
-      <a class="logo" href="./index.html">
-        <span class="web">Web</span>Studio</a
+      <a class="logows" href="./index.html">
+        <span class="web-logo">Web</span>Studio</a
       >
       <p>
         Increase the flow of customers and sales for your business with digital
